<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/preference_sorting_title"
        android:key="@string/preference_sorting_key"
        android:defaultValue="@string/preference_sorting_default"
        android:entryValues="@array/preference_sorting_entry_values"
        android:entries="@array/preference_sorting_entries"
        />

    <ListPreference
        android:title="@string/preference_preview_width_title"
        android:key="@string/preference_preview_width"
        android:defaultValue="@string/preference_preview_width_default"
        android:entryValues="@array/preference_preview_width_entry_values"
        android:entries="@array/preference_preview_width_entries"
        />
</PreferenceScreen>